--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -23,4 +23,4 @@ jobs:
           build_configuration: production
           base_href: /NexoRun/
           deploy_branch: gh-pages
-          angular_dist_build_folder: dist/NexoRun
+          angular_dist_build_folder: dist/nexorun
